--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "src/api/server.js",
       "use": "@vercel/node",
       "config": {
         "includeFiles": ["db.json"]
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "src/api/server.js"
     }
   ]
 }
