--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,20 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "src/api/server.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["db.json"]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "src/api/server.js"
-    }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "src/api/server.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "db.json"
+                ]
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "src/api/server.js"
+        }
+    ]
 }
