--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,21 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "src/api/server.js",
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "db.json"
-                ]
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "src/api/server.js"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      // The source path now points to your server file
+      "src": "src/api/server.js",
+      "use": "@vercel/node",
+      "config": {
+        // IMPORTANT: include the db.json file from the root
+        "includeFiles": ["db.json"] 
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      // The destination points to the serverless function source path
+      "dest": "src/api/server.js"
+    }
+  ]
 }
